// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should have ids when ids is true 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 212,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "chunks": [
    {
      "auxiliaryFiles": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 59,
      "type": "chunk",
    },
  ],
  "filteredModules": undefined,
  "modules": [
    {
      "chunks": [
        "909",
      ],
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "orphan": false,
      "size": 59,
      "type": "module",
    },
  ],
}
`;

exports[`Stats should have stats 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 212,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "children": [],
  "chunks": [
    {
      "auxiliaryFiles": [],
      "children": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "585",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/a",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
          "usedExports": null,
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 59,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 212,
        },
      ],
      "assetsSize": 212,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "57e46af248a1c1fe076f",
  "logging": {},
  "modules": [
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/a",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
      "usedExports": null,
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 212,
        },
      ],
      "assetsSize": 212,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`Stats should have usedExports and providedExports stats 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 785,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "children": [],
  "chunks": [
    {
      "auxiliaryFiles": [],
      "children": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "83",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/a.js",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "issuerId": "314",
          "issuerName": "./fixtures/esm/abc.js",
          "issuerPath": [
            {
              "id": "314",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "name": "./fixtures/esm/abc.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/esm/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/a.js",
          "orphan": false,
          "providedExports": [
            "a",
            "default",
          ],
          "reasons": [
            {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import",
              "userRequest": "./a",
            },
            {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import specifier",
              "userRequest": "./a",
            },
          ],
          "size": 38,
          "type": "module",
          "usedExports": [
            "a",
          ],
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "178",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/b.js",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "issuerId": "314",
          "issuerName": "./fixtures/esm/abc.js",
          "issuerPath": [
            {
              "id": "314",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "name": "./fixtures/esm/abc.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/esm/b.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/b.js",
          "orphan": false,
          "providedExports": [
            "b",
            "default",
          ],
          "reasons": [
            {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import",
              "userRequest": "./b",
            },
            {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import specifier",
              "userRequest": "./b",
            },
          ],
          "size": 38,
          "type": "module",
          "usedExports": [
            "default",
          ],
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "609",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/c.js",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "issuerId": "314",
          "issuerName": "./fixtures/esm/abc.js",
          "issuerPath": [
            {
              "id": "314",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "name": "./fixtures/esm/abc.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/esm/c.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/c.js",
          "orphan": false,
          "providedExports": [
            "c",
            "default",
          ],
          "reasons": [
            {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import",
              "userRequest": "./c",
            },
            {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import specifier",
              "userRequest": "./c",
            },
          ],
          "size": 38,
          "type": "module",
          "usedExports": true,
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "314",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/esm/abc.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/esm/abc",
            },
          ],
          "size": 81,
          "type": "module",
          "usedExports": [],
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 195,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 785,
        },
      ],
      "assetsSize": 785,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "90855ad020cd8866adbb",
  "logging": {},
  "modules": [
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "83",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/a.js",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "issuerId": "314",
      "issuerName": "./fixtures/esm/abc.js",
      "issuerPath": [
        {
          "id": "314",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "name": "./fixtures/esm/abc.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/esm/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/a.js",
      "orphan": false,
      "providedExports": [
        "a",
        "default",
      ],
      "reasons": [
        {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import",
          "userRequest": "./a",
        },
        {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import specifier",
          "userRequest": "./a",
        },
      ],
      "size": 38,
      "type": "module",
      "usedExports": [
        "a",
      ],
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "178",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/b.js",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "issuerId": "314",
      "issuerName": "./fixtures/esm/abc.js",
      "issuerPath": [
        {
          "id": "314",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "name": "./fixtures/esm/abc.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/esm/b.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/b.js",
      "orphan": false,
      "providedExports": [
        "b",
        "default",
      ],
      "reasons": [
        {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import",
          "userRequest": "./b",
        },
        {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import specifier",
          "userRequest": "./b",
        },
      ],
      "size": 38,
      "type": "module",
      "usedExports": [
        "default",
      ],
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "609",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/c.js",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "issuerId": "314",
      "issuerName": "./fixtures/esm/abc.js",
      "issuerPath": [
        {
          "id": "314",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "name": "./fixtures/esm/abc.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/esm/c.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/c.js",
      "orphan": false,
      "providedExports": [
        "c",
        "default",
      ],
      "reasons": [
        {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import",
          "userRequest": "./c",
        },
        {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import specifier",
          "userRequest": "./c",
        },
      ],
      "size": 38,
      "type": "module",
      "usedExports": true,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "314",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/esm/abc.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/esm/abc",
        },
      ],
      "size": 81,
      "type": "module",
      "usedExports": [],
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "",
      "identifier": "webpack/runtime/has_own_property",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "runtime",
      "name": "webpack/runtime/has_own_property",
      "nameForCondition": undefined,
      "orphan": false,
      "providedExports": null,
      "reasons": [],
      "size": 160,
      "type": "module",
      "usedExports": null,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "",
      "identifier": "webpack/runtime/make_namespace_object",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "runtime",
      "name": "webpack/runtime/make_namespace_object",
      "nameForCondition": undefined,
      "orphan": false,
      "providedExports": null,
      "reasons": [],
      "size": 160,
      "type": "module",
      "usedExports": null,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "",
      "identifier": "webpack/runtime/define_property_getters",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "runtime",
      "name": "webpack/runtime/define_property_getters",
      "nameForCondition": undefined,
      "orphan": false,
      "providedExports": null,
      "reasons": [],
      "size": 160,
      "type": "module",
      "usedExports": null,
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 785,
        },
      ],
      "assetsSize": 785,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`Stats should output stats with query 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 387,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "children": [],
  "chunks": [
    {
      "auxiliaryFiles": [],
      "children": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "585",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "issuerId": "432",
          "issuerName": "./fixtures/c.js?c=3",
          "issuerPath": [
            {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
            {
              "id": "432",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "name": "./fixtures/c.js?c=3",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": "432",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "moduleName": "./fixtures/c.js?c=3",
              "type": "cjs require",
              "userRequest": "./a",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
          "usedExports": null,
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "958",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuerId": "919",
          "issuerName": "./fixtures/abc-query.js",
          "issuerPath": [
            {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js?a=1",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": "919",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "moduleName": "./fixtures/abc-query.js",
              "type": "cjs require",
              "userRequest": "./a?a=1",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
          "usedExports": null,
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "432",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuerId": "919",
          "issuerName": "./fixtures/abc-query.js",
          "issuerPath": [
            {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/c.js?c=3",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/c.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": "919",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "moduleName": "./fixtures/abc-query.js",
              "type": "cjs require",
              "userRequest": "./c?c=3",
            },
          ],
          "size": 79,
          "source": "module.exports = function b() {
    require("./a");
    return "This is c";
};
",
          "type": "module",
          "usedExports": null,
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/abc-query.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/abc-query",
            },
          ],
          "size": 99,
          "source": "exports.a = require("./a?a=1");
// exports.b = require("./b?b=2");
exports.c = require("./c?c=3");
",
          "type": "module",
          "usedExports": null,
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 296,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 387,
        },
      ],
      "assetsSize": 387,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "863c8adf2d7c24d82182",
  "logging": {},
  "modules": [
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
      "issuerId": "432",
      "issuerName": "./fixtures/c.js?c=3",
      "issuerPath": [
        {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
        {
          "id": "432",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "name": "./fixtures/c.js?c=3",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": "432",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "moduleName": "./fixtures/c.js?c=3",
          "type": "cjs require",
          "userRequest": "./a",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
      "usedExports": null,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "958",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuerId": "919",
      "issuerName": "./fixtures/abc-query.js",
      "issuerPath": [
        {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js?a=1",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": "919",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "moduleName": "./fixtures/abc-query.js",
          "type": "cjs require",
          "userRequest": "./a?a=1",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
      "usedExports": null,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "432",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuerId": "919",
      "issuerName": "./fixtures/abc-query.js",
      "issuerPath": [
        {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/c.js?c=3",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/c.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": "919",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "moduleName": "./fixtures/abc-query.js",
          "type": "cjs require",
          "userRequest": "./c?c=3",
        },
      ],
      "size": 79,
      "source": "module.exports = function b() {
    require("./a");
    return "This is c";
};
",
      "type": "module",
      "usedExports": null,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "919",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/abc-query.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/abc-query",
        },
      ],
      "size": 99,
      "source": "exports.a = require("./a?a=1");
// exports.b = require("./b?b=2");
exports.c = require("./c?c=3");
",
      "type": "module",
      "usedExports": null,
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 387,
        },
      ],
      "assetsSize": 387,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;
